# palace-ai

./: .env.example  .gitignore  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: README.md
examples/worked/: review.md
palace/: cli.py
palace-out/: PALACE.md  README.md  network.json
palace-out/cache/extractions/: sha256_01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b.json  sha256_0cb3e0eb683c66e9795adbdfa1967cccf5d7fa38189c4d212c3165b56d0da8f0.json  sha256_1a45cdeaf8120471c4e2de5924ebbe4d252afecacdfb94eb1a1fb4db9be97bc1.json  sha256_27bb088d1e97a031a9e494d5ccec642b97d2a145546bf3e373b8916610161a62.json  sha256_2f9c3e8a65f9e5a0137f9da4d94f4a0aebc7f3e430616986ce6a272c734d7db8.json  sha256_332b9e8ed623f6bb533555d12f540372dd175a4297ba1f483ca1ab124ecad6c3.json  sha256_54c62876da25edef66720e71cd926c373f3f5a15f79514941d101b4c9287e5a3.json  sha256_889500780db96da4ddc3ee8f7c3d1e178aa1a48343251248fb268cab1b382c42.json  sha256_90875423db059d65b39416d7b6d01b18938851b8071279877400beb506e08676.json  sha256_90ac39d6cb9c0fbaa94c5aa59646bf6097829ae73e50ac284a41135188f95d33.json  sha256_90de03009b11a4c29942a17b693fa53d5cb5ddb5751f195a809c73bbda31442b.json  sha256_a5908dfae686ab9011ac12b8010969148a19eb9b90765ae2c478c01faf2ce0ea.json  sha256_c31d83bf96fbf585c0d497fbf21a39b2e69411948ddb947e5ad51e5857976c5c.json  sha256_db5fac7340c49c49551e3e41679a8ee6e385c56054f84073932354a8da87df65.json  sha256_e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.json  sha256_e8f385c7c3e7a60358a46788e109b7fbdf348da6e2cf60af95b8e33706e42849.json  sha256_f41924bd99d9f32682a760f0dfde9b4046502541e9b3bde359fe4de14fa6585b.json  (+3 more)
palace-out/rooms/: build.md  utils.md  worked-repos-10.md  worked-repos-9.md  worked-repos.md
palace-out/visualizer/: index.html
palace/install/: claude.py
palace/query/: activator.py  stats.py
palace/utils/: cache.py  language_detect.py  token_counter.py
palace/visualizer/: builder.py  serve.py  template.html
tests/fixture/: js_a.js  js_b.js  py_a.py
(+62 files in other folders)
